tests/fixtures/invalid/round_list_int.py
# Cannot call round() with List[int], Int
x = round([1, 2, 3], 1)
